--- a/cinema/cinema/appsettings.json
+++ b/cinema/cinema/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CinemaDbContext": "Data Source=localhost;User ID=sa;Password=MyPass@word;Database=cinema"
+  }
 }
