seeded movies, movies controller and view working

--- a/cinema/cinema/appsettings.json
+++ b/cinema/cinema/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CinemaDbContext": "Data Source=localhost;User ID=sa;Password=MyPass@word;Database=cinema"
+    "CinemaDbContext": "Data Source=localhost;User ID=sa;Password=MyPass@word;Database=cinema",
+    "cinemaContext": "Server=(localdb)\\mssqllocaldb;Database=cinemaContext-33a07529-6333-4551-83bf-0096c234f515;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
