--- a/cinema/cinema/appsettings.json
+++ b/cinema/cinema/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CinemaDbContext": "Data Source=.\\SQLEXPRESS;Initial Catalog=cinema;Integrated Security=True;MultipleActiveResultSets=True"
+    "CinemaDbContext": "Data Source=localhost;User ID=sa;Password=MyPass@word;Database=cinema"
   }
 }
