--- a/cinema/cinema/Properties/launchSettings.json
+++ b/cinema/cinema/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "cinema": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:7184;http://localhost:5184",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
