--- a/cinema/cinema/appsettings.json
+++ b/cinema/cinema/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "cinemaContext": "Server=(localdb)\\mssqllocaldb;Database=cinemaContext-33a07529-6333-4551-83bf-0096c234f515;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "CinemaDbContext": "Server=(localdb)\\mssqllocaldb;Database=cinemaContext-33a07529-6333-4551-83bf-0096c234f515;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
