--- a/cinema/cinema/appsettings.json
+++ b/cinema/cinema/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CinemaDbContext": "Data Source=thuis.rijk.se;User ID=sa;Password=line-reason-riverbank-subpanel;Database=jeroen"
+    "CinemaDbContext": "Data Source=thuis.rijk.se;User ID=sa;Password=line-reason-riverbank-subpanel;Database=burak"
   }
 }
