--- a/cinema/cinema/cinema.csproj
+++ b/cinema/cinema/cinema.csproj
@@ -16,9 +16,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.2" />
+    <PackageReference Include="Stripe.net" Version="39.98.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\images" />
     <Folder Include="wwwroot\lib\bootstrap\dist" />
   </ItemGroup>
 
