--- a/cinema/cinema/cinema.csproj
+++ b/cinema/cinema/cinema.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ViewModels" />
     <Folder Include="wwwroot\images" />
     <Folder Include="wwwroot\lib\bootstrap\dist" />
   </ItemGroup>
