--- a/cinema/cinema/cinema.csproj
+++ b/cinema/cinema/cinema.csproj
@@ -52,4 +52,8 @@
     <_ContentIncludedByDefault Remove="Views\Maps\Index.cshtml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Data\ICinemaContext.cs" />
+  </ItemGroup>
+
 </Project>
