--- a/cinema/cinema/cinema.csproj
+++ b/cinema/cinema/cinema.csproj
@@ -20,7 +20,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ViewModels" />
     <Folder Include="wwwroot\images" />
     <Folder Include="wwwroot\lib\bootstrap\dist" />
   </ItemGroup>
@@ -51,6 +50,8 @@
     <_ContentIncludedByDefault Remove="Pages\Maps\Details.cshtml" />
     <_ContentIncludedByDefault Remove="Pages\Maps\Index.cshtml" />
     <_ContentIncludedByDefault Remove="Views\Maps\Index.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\Users\Login.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\Users\Register.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
